<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.loginFlows.LoginScreen">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/new_login_bg"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView11"
            android:contentDescription="@string/logo"
            android:layout_margin="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/key_stone_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/agency_banking"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_15dp"
            android:background="@color/element_bg_color"
            android:layout_marginVertical="@dimen/dimen_40dp"
            android:layout_marginHorizontal="@dimen/dimen_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/dimen_25dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView28"
                    style="@style/headingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="@string/welcome"
                    android:textColor="@color/color_main_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/subTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_to_ur_account"
                    android:textColor="@color/color_main_2"
                    app:layout_constraintEnd_toEndOf="@+id/textView28"
                    app:layout_constraintStart_toStartOf="@+id/textView28"
                    app:layout_constraintTop_toBottomOf="@+id/textView28" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    style="@style/textInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_35dp"
                    android:layout_marginHorizontal="@dimen/dimen_25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userNameTIET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_user_icon"
                        android:drawablePadding="@dimen/dimen_20dp"
                        android:hint="@string/username"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/remember_me_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/color_main_2"
                    android:focusable="false"
                    android:text="@string/remember_me"
                    android:textColor="@color/color_main_2"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/color_main_2"
                    app:layout_constraintBottom_toBottomOf="@+id/remember_me_check_box"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintTop_toTopOf="@+id/remember_me_check_box" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/textInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordTIET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dimen_20dp"
                        android:hint="@string/enterPassword"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <android.widget.Button
                    android:id="@+id/proceedBtn"
                    style="@style/buttonStyle"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_30dp"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fingerPrint"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/remember_me_check_box"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/fingerPrint"
                    android:layout_width="@dimen/dimen_35dp"
                    android:layout_height="@dimen/dimen_35dp"
                    android:contentDescription="@string/unlock_using_fingerprint_sensor"
                    android:src="@drawable/ic_fingerprint_recognition"
                    app:layout_constraintBottom_toBottomOf="@+id/proceedBtn"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintTop_toTopOf="@+id/proceedBtn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>