<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.main.fundwalletflow.AddCard">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dimen_15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/tilWithUnderline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:inputType="number"
                android:textColorHighlight="@color/color_main_2"
                android:textColorHint="@color/color_main_2"
                android:textSize="@dimen/dimen_22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiryDate"
            style="@style/tilWithUnderline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expirationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                validate="@{1}"
                android:hint="@string/card_expiry_date"
                android:maxLength="5"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="@dimen/dimen_22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/tilWithUnderline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_cvv"
                android:inputType="numberPassword"
                android:maxLength="3"
                android:textColorHighlight="@color/color_main_2"
                android:textColorHint="@color/color_main_2"
                android:textSize="@dimen/dimen_22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/tilWithUnderline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/expiryDate"
            app:layout_constraintTop_toBottomOf="@+id/expiryDate">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="number"
                android:textColorHighlight="@color/color_main_2"
                android:textColorHint="@color/color_main_2"
                android:textSize="@dimen/dimen_22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/tilWithUnderline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin"
                android:maxLength="4"
                android:inputType="numberPassword"
                android:textColorHighlight="@color/color_main_2"
                android:textColorHint="@color/color_main_2"
                android:textSize="@dimen/dimen_22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceedBtn"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            app:backgroundTint="@color/color_main_2"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:icon="@drawable/ic_lock"
            app:iconGravity="textStart"
            app:iconSize="@dimen/dimen_20dp"
            app:iconPadding="@dimen/dimen_10dp"
            android:drawablePadding="0dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_30dp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins"
            android:text="@string/card_is_encrypted"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>